adapt changes